// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`square matrix rendering DotmSquare1 1`] = `
[
  0.88,
  0.14,
  0.88,
  0.14,
  0.88,
  0.14,
  0,
  0,
  0,
  0.14,
  0.88,
  0,
  0,
  0,
  0.88,
  0.14,
  0,
  0,
  0,
  0.14,
  0.88,
  0.14,
  0.88,
  0.14,
  0.88,
]
`;

exports[`square matrix rendering DotmSquare2 1`] = `
[
  0.08,
  0.08,
  0.14,
  0.22,
  0.31,
  0.08,
  0,
  0,
  0,
  0.42,
  0.08,
  0,
  0,
  0,
  0.54,
  0.08,
  0,
  0,
  0,
  0.68,
  1,
  0.08,
  0.08,
  0.08,
  0.82,
]
`;

exports[`square matrix rendering DotmSquare3 1`] = `
[
  0.16,
  0.1925,
  0.225,
  0.2575,
  0.29000000000000004,
  0.6475000000000001,
  0,
  0,
  0,
  0.3225,
  0.6150000000000001,
  0,
  0,
  0,
  0.355,
  0.5825,
  0,
  0,
  0,
  0.38750000000000007,
  0.55,
  0.5175,
  0.485,
  0.4525,
  0.42000000000000004,
]
`;

exports[`square matrix rendering DotmSquare4 1`] = `
[
  0.2,
  0.248,
  0.29600000000000004,
  0.344,
  0.392,
  0.9199999999999999,
  0,
  0,
  0,
  0.44,
  0.8719999999999999,
  0,
  0,
  0,
  0.488,
  0.8240000000000001,
  0,
  0,
  0,
  0.536,
  0.776,
  0.728,
  0.6799999999999999,
  0.632,
  0.5840000000000001,
]
`;

exports[`square matrix rendering DotmSquare5 1`] = `
[
  0.16,
  0.1925,
  0.3225,
  0.355,
  0.6150000000000001,
  0.225,
  0,
  0,
  0,
  0.6475000000000001,
  0.2575,
  0,
  0,
  0,
  0.8425,
  0.4525,
  0,
  0,
  0,
  0.875,
  0.485,
  0.745,
  0.7775,
  0.9075000000000001,
  0.9400000000000001,
]
`;

exports[`square matrix rendering DotmSquare6 1`] = `
[
  0.88,
  0.22,
  0.88,
  0.22,
  0.88,
  0.715,
  0,
  0,
  0,
  0.715,
  0.55,
  0,
  0,
  0,
  0.55,
  0.385,
  0,
  0,
  0,
  0.385,
  0.22,
  0.88,
  0.22,
  0.88,
  0.22,
]
`;

exports[`square matrix rendering DotmSquare7 1`] = `
[
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
]
`;

exports[`square matrix rendering DotmSquare8 1`] = `
[
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
]
`;

exports[`square matrix rendering DotmSquare9 1`] = `
[
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
  0.26,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.26,
  0.26,
  0,
  0,
  0,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
]
`;

exports[`square matrix rendering DotmSquare10 1`] = `
[
  0.46,
  0.46,
  0.46,
  0.46,
  0.46,
  0.36500000000000005,
  0,
  0,
  0,
  0.36500000000000005,
  0.27,
  0,
  0,
  0,
  0.27,
  0.175,
  0,
  0,
  0,
  0.175,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
]
`;

exports[`square matrix rendering DotmSquare11 1`] = `
[
  0.2,
  0.38,
  0.56,
  0.38,
  0.2,
  0.38,
  0,
  0,
  0,
  0.38,
  0.56,
  0,
  0,
  0,
  0.56,
  0.38,
  0,
  0,
  0,
  0.38,
  0.2,
  0.38,
  0.56,
  0.38,
  0.2,
]
`;

exports[`square matrix rendering DotmSquare12 1`] = `
[
  0.7,
  0.825,
  0.7,
  0.575,
  0.45,
  0.825,
  0,
  0,
  0,
  0.575,
  0.7,
  0,
  0,
  0,
  0.45,
  0.575,
  0,
  0,
  0,
  0.32499999999999996,
  0.45,
  0.575,
  0.45,
  0.32499999999999996,
  0.2,
]
`;

exports[`square matrix rendering DotmSquare13 1`] = `
[
  0.08,
  0.08,
  1,
  0.08,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
  0.08,
]
`;

exports[`square matrix rendering DotmSquare14 1`] = `
[
  1,
  0.08,
  0.08,
  0.08,
  1,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  1,
  0.08,
  0.08,
  0.08,
  1,
]
`;

exports[`square matrix rendering DotmSquare15 1`] = `
[
  0.24,
  1,
  0.58,
  1,
  0.24,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  1,
  0,
  0,
  0,
  1,
  1,
  0.24,
  0.08,
  0.24,
  1,
]
`;

exports[`square matrix rendering DotmSquare16 1`] = `
[
  0.08,
  0.24,
  1,
  0.24,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  0.24,
  0,
  0,
  0,
  0.24,
  0.24,
  1,
  0.24,
  1,
  0.24,
]
`;

exports[`square matrix rendering DotmSquare17 1`] = `
[
  0.08,
  0.24,
  1,
  0.24,
  0.08,
  0.08,
  0,
  0,
  0,
  1,
  0.08,
  0,
  0,
  0,
  0.24,
  0.24,
  0,
  0,
  0,
  0.08,
  1,
  0.24,
  0.08,
  0.08,
  0.08,
]
`;

exports[`square matrix rendering DotmSquare18 1`] = `
[
  0.08,
  1,
  0.08,
  0.08,
  0.08,
  0.08,
  0,
  0,
  0,
  0.08,
  1,
  0,
  0,
  0,
  0.08,
  0.94,
  0,
  0,
  0,
  0.08,
  0.94,
  0.94,
  0.94,
  0.94,
  1,
]
`;

exports[`square matrix rendering DotmSquare19 1`] = `
[
  0.14142676084600425,
  0.15168019968818372,
  0.09751406179884457,
  0.15168019968818372,
  0.14142676084600425,
  0.2681423919480863,
  0,
  0,
  0,
  0.2681423919480863,
  0.2800000103999474,
  0,
  0,
  0,
  0.2800000103999474,
  0.26814239194808637,
  0,
  0,
  0,
  0.2681423919480863,
  0.14142676084600422,
  0.15168019968818372,
  0.09751406179884456,
  0.15168019968818372,
  0.14142676084600425,
]
`;

exports[`square matrix rendering DotmSquare20 1`] = `
[
  0.48,
  0.48,
  0.48,
  0.48,
  0.48,
  0.48,
  0,
  0,
  0,
  0.48,
  0.48,
  0,
  0,
  0,
  0.48,
  0.48,
  0,
  0,
  0,
  0.48,
  0.48,
  0.48,
  0.48,
  0.48,
  0.48,
]
`;
